<resources>
    //MainActivity
    <string name="welcome">Bienvenido!</string>
    <string name="logout">Desconectate</string>
    <string name="invoices">Recibos de Compra</string>

    //LoginActivity
    <string name="app_name">Warranty Manager</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_text">¿No tienes cuenta? <u>Regístrate</u></string>

    <string name="error_authentication_failed">Autenticación fallida.</string>
    <string name="error_enter_email_password">Por favor, introduce el correo electrónico y la contraseña.</string>


    //RegisterActivity
    <string name="register_title">Registro de Usuario</string>
    <string name="name_hint">Nombre de Usuario</string>
    <string name="confirm_password_hint">Confirmar Contraseña</string>
    <string name="register_button">Registrarse</string>

    <string name="error_empty_name">Ingrese un nombre de usuario</string>
    <string name="error_empty_email">Ingrese un correo electrónico</string>
    <string name="error_empty_password">Ingrese una contraseña</string>
    <string name="error_empty_confirm_password">Confirme la contraseña</string>
    <string name="error_password_mismatch">Las contraseñas no coinciden</string>
    <string name="error_registration_failed">Registro fallido: %1$s</string>
    <string name="error_unknown">Error desconocido.</string>

    //InvoicesActivity
    <string name="invoices_title">Recibos de Compra</string>
    <string name="orders_title">Ordernar</string>
    <string name="user_title">Usuario</string>

    //AlertDialog
    <string name="delete_account_title">ELIMINACIÓN DE CUENTA</string>
    <string name="delete_account_message">Se eliminará permanentemente tu cuenta y todos los datos asociados, incluyendo archivos y configuraciones. Esta acción no se puede deshacer. ¿Estás seguro de que deseas continuar?</string>
    <string name="delete_account_positive_button">ELIMINAR CUENTA</string>
    <string name="delete_account_negative_button">CANCELAR</string>

    invoices_title

    //AddInvoicesActivity
    <string name="hint_manufacturer">Fabricante</string>
    <string name="hint_product_name">Nombre del producto</string>
    <string name="hint_price">Precio del producto</string>
    <string name="hint_supplier">Proveedor</string>
    <string name="text_purchase_date">Fecha de compra</string>
    <string name="title_purchase_date">Fecha de Compra</string>
    <string name="title_warranty_period">Periodo de Garantía</string>
    <string name="title_warranty_until">Garantía Hasta</string>

    <string name="hint_warranty_period">Selecciona el período de garantía</string>
    <string-array name="warranty_periods">
        <item>6 meses</item>
        <item>1 año</item>
        <item>2 años</item>
        <item>3 años</item>
    </string-array>

    <string name="button_add_image">Agregar imagen</string>
    <string name="button_attach_document">Adjuntar documento</string>
    <string name="button_save_invoice">Guardar factura</string>

    //InvoiceDetails
    <string name="label_manufacturer">Fabricante:</string>
    <string name="label_product_name">Nombre del producto:</string>
    <string name="label_price">Precio:</string>
    <string name="label_supplier">Proveedor:</string>
    <string name="label_purchase_date">Fecha de compra: </string>
    <string name="label_warranty_date">Garantia hasta: </string>
    <string name="label_warranty_period">Período de garantía:</string>

    <string name="label_remaining_warranty">Garantía restante: %1$d meses</string>

    <string name="button_view_invoice">Ver factura</string>
    <string name="button_delete_product">Eliminar producto</string>

    <string name="content_description_edit">Editar</string>

    //Invoice Adapter
    <string name="label_adapter_warranty_date">Garantía hasta: %1$s</string>
    <string name="label_adapter_remaining_warranty">Quedan: %1$d meses</string>

    //EditInvoice

    <string name="button_change_product_image">Cambiar imagen</string>
    <string name="button_delete_product_image">Eliminar imagen</string>
    <string name="button_change_invoice_file">Cambiar archivo de factura</string>
    <string name="button_delete_invoice_file">Eliminar archivo de factura</string>
    <string name="button_update_product">Actualizar producto</string>

</resources>