<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageViewProduct"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/radius"
                tools:src="@drawable/ic_product_placeholder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/buttonReplaceProductImage"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_replace" />

                <ImageButton
                    android:id="@+id/buttonAddProductImage"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_add_photo" />

                <ImageButton
                    android:id="@+id/buttonRemoveProductImage"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_delete" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_manufacturer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextManufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_supplier">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSupplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/text_purchase_date"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textViewPurchaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/title_warranty_period">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteWarrantyPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="18sp"
                app:simpleItems="@array/warranty_periods" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="125dp"
                android:layout_height="125dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageViewInvoiceFile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/radius"
                    tools:src="@drawable/ic_product_placeholder" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/buttonReplaceInvoiceFile"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_replace" />

                <ImageButton
                    android:id="@+id/buttonAddInvoiceFile"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_upload_file" />

                <ImageButton
                    android:id="@+id/buttonRemoveInvoiceFile"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_delete" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUpdateInvoice"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/button_update_product"
            android:textSize="18sp"
            app:icon="@drawable/ic_save"
            app:iconGravity="textStart"
            app:iconSize="22dp" />

    </LinearLayout>

</ScrollView>